# cmake-colorslib

./: CMakeLists.txt
black-lib/: CMakeLists.txt
black-lib/include/: black.h
black-lib/src/: black.cpp
white-lib/: CMakeLists.txt
white-lib/include/: white.h
white-lib/src/: white.cpp
